Add casino project

--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
                     </div>
                     </a>
                 </div>
+
+                <div class="portfolio-item">
+                    <a href="index2.html">
+                    <div class="portfolio-image">Casino system</div>
+                    <div class="portfolio-overlay">
+                    <h3>Working Casino Using c++</h3>
+                    </div>
+                    </a>
+                </div>
              
                
             </div>
