--- a/index2.html
+++ b/index2.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <div class="Casi text-white">
-    <h1 class="text-red-800 font-bold ">Working Casino Using C++</h1>
-    <p>This project is a fully functional casino system built using C++. It features various games and a user-friendly interface.</p>
-    <h2>Features</h2>
+        <div class="title flex justify-center bg-black border-2 border-red-800 p-4 mb-4">
+            <h1 class="text-red-800 font-bold text-3xl">Working Casino Using C++</h1>
+        </div>
+    <p class="text-[29px]">This project is a fully functional casino system built using C++. It features various games and a user-friendly interface.</p>
+    <h2 class="font-black  text-yellow-400">Features : </h2>
     <ul>
-        <li>Multiple game options (Blackjack, Roulette, etc.)</li>
-        <li>User authentication and account management</li>
-        <li>Realistic graphics and sound effects</li>
+        <li>1.Multiple game options (Blackjack, Roulette, etc.)</li>
+        <li>2.User authentication and account management</li>
+        <li>3.Realistic graphics and sound effects</li>
     </ul>
-    <h2>Technologies Used</h2>
+    <h2 class="font-black text-yellow-400">Technologies Used : </h2>
     <ul>
-        <li>C++</li>
-        <li>SFML (Simple and Fast Multimedia Library)</li>
+        <li>1. C++</li>
+        <li>2. SFML (Simple and Fast Multimedia Library)</li>
     </ul>
     <a href="index.html" class="border-2">Back to Home</a>
     </div>
@@ -50,5 +52,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <h3>Created by Mahansa- Free to used</h3>
+    </footer>
 </body>
 </html>
