Desain lebih bagus

--- a/index2.html
+++ b/index2.html
@@ -8,24 +8,45 @@
      <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="Casi text-white">
-        <div class="title flex justify-center bg-black border-2 border-red-800 p-4 mb-4">
-            <h1 class="text-red-800 font-bold text-3xl">Working Casino Using C++</h1>
-        </div>
-    <p class="text-[29px]">This project is a fully functional casino system built using C++. It features various games and a user-friendly interface.</p>
-    <h2 class="font-black  text-yellow-400">Features : </h2>
-    <ul>
-        <li>1.Multiple game options (Blackjack, Roulette, etc.)</li>
-        <li>2.User authentication and account management</li>
-        <li>3.Realistic graphics and sound effects</li>
+   <div class="Casi text-white min-h-screen bg-gradient-to-b from-black via-gray-900 to-black p-6">
+  <!-- Title -->
+  <div class="title flex justify-center items-center bg-black border-2 border-red-800 w-full rounded-2xl shadow-lg py-4 mb-6">
+    <h1 class="text-red-600 font-extrabold text-4xl tracking-wide">
+      🎰 Working Casino Using C++
+    </h1>
+  </div>
+
+
+  <p class="text-lg md:text-xl text-gray-300 text-center max-w-3xl mx-auto leading-relaxed mb-10">
+    This project is a fully functional casino system built using C++. 
+    It features various games and a user-friendly interface.
+  </p>
+
+  <div class="max-w-3xl mx-auto bg-gray-800/60 p-6 rounded-2xl shadow-lg mb-6 border border-gray-700">
+    <h2 class="font-black text-yellow-400 text-2xl mb-4">✨ Features</h2>
+    <ul class="space-y-2 text-gray-200 list-disc list-inside">
+      <li>Multiple game options (Blackjack, Roulette, etc.)</li>
+      <li>User authentication and account management</li>
     </ul>
-    <h2 class="font-black text-yellow-400">Technologies Used : </h2>
-    <ul>
-        <li>1. C++</li>
-        <li>2. SFML (Simple and Fast Multimedia Library)</li>
+  </div>
+
+
+  <div class="max-w-3xl mx-auto bg-gray-800/60 p-6 rounded-2xl shadow-lg mb-6 border border-gray-700">
+    <h2 class="font-black text-yellow-400 text-2xl mb-4">🛠 Technologies Used</h2>
+    <ul class="space-y-2 text-gray-200 list-disc list-inside">
+      <li>C++</li>
+      <li>SFML (Simple and Fast Multimedia Library)</li>
     </ul>
-    <a href="index.html" class="border-2">Back to Home</a>
-    </div>
+  </div>
+
+
+  <div class="flex justify-center">
+    <a href="index.html" 
+       class="px-6 py-3 rounded-xl border-2 border-red-600 text-red-500 font-semibold text-lg hover:bg-red-600 hover:text-white transition duration-300 shadow-md">
+       ⬅ Back to Home
+    </a>
+  </div>
+</div>
    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="section-title">Download Button</h2>
